ClashAi: rewrite it to use new SpellAbilityAi format